if(enable-qt5)
	set(MGL_HAVE_QT5 1)
	find_package(Qt5Core REQUIRED)
	find_package(Qt5Widgets REQUIRED)
	find_package(Qt5Gui REQUIRED)
	find_package(Qt5Network REQUIRED)
	find_package(Qt5WebKit REQUIRED)
	find_package(Qt5PrintSupport REQUIRED)
	if(NOT Qt5Core_FOUND)
		message(SEND_ERROR "Couldn't find Qt5 Core library.")
	endif(NOT Qt5Core_FOUND)
	if(NOT Qt5Gui_FOUND)
		message(SEND_ERROR "Couldn't find Qt5 Gui library.")
	endif(NOT Qt5Gui_FOUND)
	if(NOT Qt5Network_FOUND)
		message(SEND_ERROR "Couldn't find Qt5 Network library.")
	endif(NOT Qt5Network_FOUND)
	if(NOT Qt5WebKit_FOUND)
		message(SEND_ERROR "Couldn't find Qt5 WebKit library.")
	endif(NOT Qt5WebKit_FOUND)
	if(NOT Qt5PrintSupport_FOUND)
		message(SEND_ERROR "Couldn't find Qt5 PrintSupport library.")
	endif(NOT Qt5PrintSupport_FOUND)

	set(CMAKE_INCLUDE_CURRENT_DIR ON)
	qt5_wrap_cpp(MGL_MOC_FILES ../include/mgl2/qmathgl.h)
	add_library(mgl-qt5 SHARED ../widgets/qt.cpp ${MGL_MOC_FILES} ../include/mgl2/qt.h ../include/mgl2/qmathgl.h)
	add_library(mgl-qt5-static STATIC ../widgets/qt.cpp ${MGL_MOC_FILES} ../include/mgl2/qt.h ../include/mgl2/qmathgl.h)
	set_target_properties(mgl-qt5 PROPERTIES SOVERSION ${MathGL_SOVERSION})
	set_target_properties(mgl-qt5 PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	set_target_properties(mgl-qt5 PROPERTIES DEFINE_SYMBOL "mgl_EXPORTS")
	set_target_properties(mgl-qt5-static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	set_target_properties(mgl-qt5-static PROPERTIES COMPILE_FLAGS -DMGL_STATIC_DEFINE)
	target_link_libraries(mgl-qt5 mgl)
	qt5_use_modules(mgl-qt5 Core Widgets Gui Network WebKit PrintSupport)
	qt5_use_modules(mgl-qt5-static Core Widgets Gui Network WebKit PrintSupport)
	if(enable-mgl2)
		set_target_properties(mgl-qt5 PROPERTIES OUTPUT_NAME "mgl2-qt5")
		set_target_properties(mgl-qt5-static PROPERTIES OUTPUT_NAME "mgl2-qt5")
	else(enable-mgl2)
		set_target_properties(mgl-qt5-static PROPERTIES OUTPUT_NAME "mgl-qt5")
	endif(enable-mgl2)

	install(
		TARGETS mgl-qt5 mgl-qt5-static
		RUNTIME DESTINATION bin
		ARCHIVE DESTINATION ${MGL_LIB_INSTALL_DIR}
		LIBRARY DESTINATION ${MGL_LIB_INSTALL_DIR}
	)
	add_subdirectory( wnd )
else(enable-qt5)
	set(MGL_HAVE_QT5 0)
endif(enable-qt5)
