include(GenerateExportHeader)
add_compiler_export_flags()

if(MGL_HAVE_FLTK)
	mgl_add_lib(fltk fltk.cpp ../include/mgl2/fltk.h)
	target_include_directories(mgl-fltk SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
	target_include_directories(mgl-fltk-static SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
	target_link_libraries(mgl-fltk mgl ${FLTK_LIBRARIES})
endif(MGL_HAVE_FLTK)

if(MGL_HAVE_GLUT)
	mgl_add_lib(glut glut.cpp ../include/mgl2/glut.h)
	target_include_directories(mgl-glut SYSTEM PUBLIC ${GLUT_INCLUDE_DIR})
	target_include_directories(mgl-glut-static SYSTEM PUBLIC ${GLUT_INCLUDE_DIR})
	target_link_libraries(mgl-glut mgl ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
endif(MGL_HAVE_GLUT)

if(MGL_HAVE_WX)
	mgl_add_lib(wx wx.cpp ../include/mgl2/wx.h)
	include(${wxWidgets_USE_FILE})
	target_link_libraries(mgl-wx mgl)
	target_link_libraries(mgl-wx ${wxWidgets_LIBRARIES})
endif(MGL_HAVE_WX)

if(enable-qt4 OR enable-qt5)

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

if(enable-qt4)
	QT4_GENERATE_MOC(../include/mgl2/qmathgl.h moc_qt4_qmathgl.cpp TARGET mgl-qt4)
	set(MGL_QT4_FILES qt.cpp ../include/mgl2/qt.h moc_qt4_qmathgl.cpp)
	mgl_add_lib(qt4 ${MGL_QT4_FILES})
	target_link_libraries(mgl-qt4 mgl ${MGL_QT4_LIBS})
	target_link_libraries(mgl-qt4-static mgl ${MGL_QT4_LIBS})
	if(NOT enable-qt5asqt)
		mgl_add_lib(qt ${MGL_QT4_FILES})
		target_link_libraries(mgl-qt mgl ${MGL_QT4_LIBS})
		target_link_libraries(mgl-qt-static mgl ${MGL_QT4_LIBS})
	endif(NOT enable-qt5asqt)

	if(MGL_HAVE_FLTK AND NOT enable-qt5)
		mgl_add_lib(wnd ${MGL_QT4_FILES} fltk.cpp ../include/mgl2/fltk.h)
		target_include_directories(mgl-wnd SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		target_include_directories(mgl-wnd-static SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		target_link_libraries(mgl-wnd mgl ${FLTK_LIBRARIES} ${MGL_QT4_LIBS})
		target_link_libraries(mgl-wnd-static mgl ${FLTK_LIBRARIES} ${MGL_QT4_LIBS})
	endif(MGL_HAVE_FLTK AND  NOT enable-qt5)
endif(enable-qt4)

if(enable-qt5)
	set(MGL_QT5_FILES qt.cpp ../include/mgl2/qt.h ../include/mgl2/qmathgl.h)
	mgl_add_lib(qt5 ${MGL_QT5_FILES})
	target_link_libraries(mgl-qt5 mgl ${MGL_QT5_LIBS})
	target_link_libraries(mgl-qt5-static mgl ${MGL_QT5_LIBS})
	if(enable-qt5asqt)
		mgl_add_lib(qt ${MGL_QT5_FILES})
		target_link_libraries(mgl-qt mgl ${MGL_QT5_LIBS})
		target_link_libraries(mgl-qt-static mgl ${MGL_QT5_LIBS})
	endif(enable-qt5asqt)
	if(MGL_HAVE_FLTK)
		mgl_add_lib(wnd ${MGL_QT5_FILES} fltk.cpp ../include/mgl2/fltk.h)
		target_include_directories(mgl-wnd SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		target_include_directories(mgl-wnd-static SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		target_link_libraries(mgl-wnd mgl ${FLTK_LIBRARIES} ${MGL_QT5_LIBS})
		target_link_libraries(mgl-wnd-static mgl ${FLTK_LIBRARIES} ${MGL_QT5_LIBS})
	endif(MGL_HAVE_FLTK)
endif(enable-qt5)
endif(enable-qt4 OR enable-qt5)